fixed horizontal scrolling issue while menu is out

--- a/src/less/map.less
+++ b/src/less/map.less
@@ -1,3 +1,8 @@
+body#map-content{
+  overflow:hidden; /* page won't scroll horizontally when menu shown */
+}
+
+
 .map_tray{
   width: 100%;
   height: 100%;  
